--- a/templates/home.html
+++ b/templates/home.html
@@ -214,12 +214,12 @@
           <div class="card-body text-center">
             <!--Category & Title-->
             <a href="" class="grey-text">
-              <h5>{{ item.get_category_display}}</h5>
+              <h5>{{ item.category}}</h5>
             </a>
             <h5>
               <strong>
                 <a href="{{ item.get_absolute_url }}" id="allItem" class="dark-grey-text">{{ item.item_name }}
-                  <span class="badge badge-pill {% if item.get_label_display == 'New' %} danger-color {% else %} primary-color {% endif %}">{{ item.get_label_display }}</span>
+                  <span class="badge badge-pill {% if item.label == 'New' %} danger-color {% else %} primary-color {% endif %}">{{ item.label }}</span>
                 </a>
               </strong>
             </h5>
